fixed menu on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ footer{
 }
 #get-in-touch{
   font-family: Inconsolata, monospace;
-  padding:0;
+  padding-left:0;
 }
 
 .contact{
